# metricscat

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
metricscat-frontend/: package-lock.json  package.json
metricscat-frontend/src/: App.css  App.js
migrations/: 20220124194619_metrics.sql  20220124232717_tags.sql  20220125212953_logs.sql  20220126015156_structured_logs.sql
src/: agent.rs  main.rs  server.rs
