[package]
name = "metricscat2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.22.5"
gethostname = "0.2.1"
tokio = { version = "1", features = ["full"] }
serde = "1.0.133"
serde_json = "1.0.74"
reqwest = "0.11.8"
async-std = "1.10.0"
sqlx = { version = "0.5.10", features = ["runtime-async-std-native-tls", "postgres", "macros", "chrono"] }
chrono = "0.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]